Adding adjustments
