# yourbank/src/domain/entity/Account.ts
@@ -8,19 +8,21 @@ export default class Account {
     cpf: string;
 	name: string;
     email: string;
-    zipCode?: string;
+    zipcode?: string;
+    city?: string;
     street?: string;
     complement?: string;
     district?: string;
     state?: string;
 	private statement: Transaction[];
 
-	constructor (cpf: string, name: string, email: string, zipCode?: string, street?: string, complement?: string, district?: string, state?: string, id?: string) {
+	constructor (cpf: string, name: string, email: string, zipcode?: string, city?: string, street?: string, complement?: string, district?: string, state?: string, id?: string) {
         this.id = id ?? uuidv4();
 		this.cpf = new Cpf(cpf).getValue();
         this.name = name;
         this.email = email;
-        this.zipCode = zipCode;
+        this.zipcode = zipcode;
+        this.city = city;
         this.street = street;
         this.complement = complement;
         this.district = district;
