# yourbank/src/infra/controller/AccountsController.ts
@@ -43,8 +43,8 @@ export default class AccountsController {
     async create (request: Request, response: Response) {
         try {
             const createAccount = new CreateAccount(this.repositoryFactory);
-            const { cpf, name, email, zipCode } = request.body;
-            const newAccount = new Account(cpf, name, email, zipCode);
+            const { cpf, name, email, zipcode } = request.body;
+            const newAccount = new Account(cpf, name, email, zipcode);
             const account = await createAccount.execute(newAccount);
             return response.status(201).json(account);
         } catch (error: any) {
